packages/aku/src/test-utils/source/__fixtures__/errors/bad-index-file/index.ts
// This file should not exist - use *-entry-point.ts instead
export { Something } from "./source.ts";
